# desktop-pet

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
public/pets/: manifest.json
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  main.rs
src-tauri/src/autostart/: mod.rs
src-tauri/src/config/: mod.rs  model.rs
src-tauri/src/mouse/: mod.rs
src-tauri/src/pet/: mod.rs  sync.rs
src-tauri/src/reminder/: mod.rs  model.rs  scheduler.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/window/: mod.rs  transparent.rs
src/ipc/: api.ts
src/lib/: config.test.ts  reminder.test.ts  reminder.ts  validate.test.ts  validate.ts
src/pet/: PetCanvas.tsx  accessories.ts  autoPolicy.test.ts  autoPolicy.ts  petStateMachine.test.ts  petStateMachine.ts  poseTransform.test.ts  poseTransform.ts  spriteEngine.test.ts  spriteEngine.ts
src/settings/: AppearanceEditor.tsx  ReminderEditor.tsx  SettingsPanel.tsx
src/store/: usePetStore.ts
src/toast/: ToastHost.tsx
