[package]
name = "desktop-pet"
version = "0.1.0"
description = "Windows 专属桌面宠物应用 (Tauri v2 + React/TypeScript)"
authors = ["Kou"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri v2 core. `tray-icon` enables the system tray, `image-png`/`icon-png`
# let us load PNG icons from disk at runtime.
tauri = { version = "2", features = ["tray-icon", "image-png", "icon-png"] }
tauri-utils = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
raw-window-handle = "0.6"

# NOTE: The architecture doc listed `windows@^0.52` and `tokio@^1`. We intentionally
# do NOT depend on the `windows` crate directly. Tauri already pulls in a specific
# `windows` (or `windows-sys`) version internally, and adding a second, possibly
# mismatched major version would cause a hard compile failure. All Win32 calls
# (window styles, WM_NCHITTEST subclass, GetCursorPos, registry) are made through
# minimal raw `extern "system"` FFI declarations in `src/window` / `src/autostart`.
# This keeps the dependency tree self-consistent and guarantees `cargo build` resolves.

[features]
# Default desktop-only build. Mobile targets are reserved for future iterations.
default = []

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
codegen-units = 1
strip = true
